# WeDPR-Component

./: README.md
.github/workflows/: cpp_full_node_workflow.yml  cpp_sdk_workflow.yml  cpp_toolkit_workflow.yml  docker.yml  release_full_node.yml  release_toolkit.yml
cpp/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
cpp/cmake/: CompilerSettings.cmake  Options.cmake  TargetSettings.cmake  grpc.cmake  python.cmake  swig.cmake
cpp/ppc-framework/front/: IFront.h
cpp/ppc-framework/gateway/: IGateway.h
cpp/ppc-framework/io/: DataBatch.h
cpp/ppc-framework/protocol/: Constant.h  DataResource.h  GrpcConfig.h  INodeInfo.h  Message.h  MessagePayload.h  Protocol.h  ServiceType.h  Task.h
cpp/tools/: build_ppc.sh  build_wedpr_cem.sh  build_wedpr_mpc.sh  install_depends.sh
cpp/wedpr-computing/ppc-pir/tests/: CMakeLists.txt  TestBaseOT.cpp
cpp/wedpr-helper/ppc-tools/: CMakeLists.txt
cpp/wedpr-initializer/: Initializer.cpp
cpp/wedpr-main/air-node/: AirNodeInitializer.cpp
cpp/wedpr-main/gateway/: CMakeLists.txt
cpp/wedpr-main/mpc-node/: CMakeLists.txt  MPCInitializer.cpp
cpp/wedpr-main/pro-node/: CMakeLists.txt  ProNodeInitializer.cpp
cpp/wedpr-protocol/grpc/: CMakeLists.txt
cpp/wedpr-transport/ppc-gateway/: CMakeLists.txt
docker-files/cpp/: Dockerfile
docker-files/model/: Dockerfile
python/: requirements.txt
python/ppc_model/: ppc_model_app.py
python/ppc_model_gateway/: ppc_model_gateway_app.py
python/tools/: install.sh
python/wedpr_ml_toolkit/: pyproject.toml  requirements.txt  setup.py  wedpr_ml_toolkit.py
(+235 files in other folders)
